Fix Stucknight bugs

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -811,7 +811,7 @@
   height: 50px;
   border-radius: 50px;
   display: inline-block;
-  line-height: 50px;
+  line-height: 50px !important;
   text-align: center;
 }
 .btn-round-lg i {
